--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-transform-define": "^1.3.0",
     "gh-pages": "^2.2.0",
     "prop-types": "^15.7.2",
-    "react-player": "^2.9.0"
+    "react-player": "^2.9.0",
+    "rimraf": "^3.0.2"
   }
 }
