--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "react-speech-kit": "^3.0.1",
     "sass": "1.26.3"
   },
   "license": "MIT",
